packages/markdown-core/extensions/html_scanners.c
/* Generated by re2c 4.6 */
#include "html_scanners.h"








bufsize_t _scan_html_tag(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	static const unsigned char yybm[256] = {
		  0, 224, 224, 224, 224, 224, 224, 224,
		224, 200, 200, 200, 200, 200, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		200, 224, 128, 224, 224, 224, 224,  64,
		224, 224, 224, 224, 224, 244, 240, 224,
		244, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 240, 224, 192, 192, 192, 224,
		224, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 244, 224, 224, 224, 224, 240,
		192, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 244, 244, 244, 244, 244, 244,
		244, 244, 244, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224
	};
	yych = (p < length ? input[p] : 0);
	if (yych <= '@') {
		if (yych == '/') goto yy3;
	} else {
		if (yych <= 'Z') goto yy4;
		if (yych <= '`') goto yy1;
		if (yych <= 'z') goto yy4;
	}
yy1:
	++p;
yy2:
	{ return 0; }
yy3:
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yych <= '@') goto yy2;
	if (yych <= 'Z') goto yy5;
	if (yych <= '`') goto yy2;
	if (yych <= 'z') goto yy5;
	goto yy2;
yy4:
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yych <= '.') {
		if (yych <= 0x1F) {
			if (yych <= 0x08) goto yy2;
			if (yych <= '\r') goto yy9;
			goto yy2;
		} else {
			if (yych <= ' ') goto yy9;
			if (yych == '-') goto yy9;
			goto yy2;
		}
	} else {
		if (yych <= '@') {
			if (yych <= '9') goto yy9;
			if (yych == '>') goto yy9;
			goto yy2;
		} else {
			if (yych <= 'Z') goto yy9;
			if (yych <= '`') goto yy2;
			if (yych <= 'z') goto yy9;
			goto yy2;
		}
	}
yy5:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 4) goto yy5;
	if (yych <= 0x1F) {
		if (yych <= 0x08) goto yy6;
		if (yych <= '\r') goto yy12;
	} else {
		if (yych <= ' ') goto yy12;
		if (yych == '>') goto yy11;
	}
yy6:
	p = marker;
	goto yy2;
yy7:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 8) goto yy7;
	if (yych <= '>') {
		if (yych <= '9') {
			if (yych == '/') goto yy10;
			goto yy6;
		} else {
			if (yych <= ':') goto yy13;
			if (yych <= '=') goto yy6;
			goto yy11;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '@') goto yy6;
			if (yych <= 'Z') goto yy13;
			goto yy6;
		} else {
			if (yych == '`') goto yy6;
			if (yych <= 'z') goto yy13;
			goto yy6;
		}
	}
yy8:
	++p;
	yych = (p < length ? input[p] : 0);
yy9:
	if (yybm[0+yych] & 8) goto yy7;
	if (yych <= '=') {
		if (yych <= '.') {
			if (yych == '-') goto yy8;
			goto yy6;
		} else {
			if (yych <= '/') goto yy10;
			if (yych <= '9') goto yy8;
			goto yy6;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= '>') goto yy11;
			if (yych <= '@') goto yy6;
			goto yy8;
		} else {
			if (yych <= '`') goto yy6;
			if (yych <= 'z') goto yy8;
			goto yy6;
		}
	}
yy10:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych != '>') goto yy6;
yy11:
	++p;
	{ return (bufsize_t)(p - start); }
yy12:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 0x1F) {
		if (yych <= 0x08) goto yy6;
		if (yych <= '\r') goto yy12;
		goto yy6;
	} else {
		if (yych <= ' ') goto yy12;
		if (yych == '>') goto yy11;
		goto yy6;
	}
yy13:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 16) goto yy13;
	if (yych <= ',') {
		if (yych <= '\r') {
			if (yych <= 0x08) goto yy6;
		} else {
			if (yych != ' ') goto yy6;
		}
	} else {
		if (yych <= '<') {
			if (yych <= '/') goto yy10;
			goto yy6;
		} else {
			if (yych <= '=') goto yy15;
			if (yych <= '>') goto yy11;
			goto yy6;
		}
	}
yy14:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= '<') {
		if (yych <= ' ') {
			if (yych <= 0x08) goto yy6;
			if (yych <= '\r') goto yy14;
			if (yych <= 0x1F) goto yy6;
			goto yy14;
		} else {
			if (yych <= '/') {
				if (yych <= '.') goto yy6;
				goto yy10;
			} else {
				if (yych == ':') goto yy13;
				goto yy6;
			}
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= '=') goto yy15;
			if (yych <= '>') goto yy11;
			if (yych <= '@') goto yy6;
			goto yy13;
		} else {
			if (yych <= '_') {
				if (yych <= '^') goto yy6;
				goto yy13;
			} else {
				if (yych <= '`') goto yy6;
				if (yych <= 'z') goto yy13;
				goto yy6;
			}
		}
	}
yy15:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 32) goto yy16;
	if (yych <= 0x00) goto yy6;
	if (yych <= ' ') goto yy15;
	if (yych <= '"') goto yy17;
	if (yych <= '\'') goto yy18;
	goto yy6;
yy16:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 32) goto yy16;
	if (yych <= 0x00) goto yy6;
	if (yych <= ' ') goto yy7;
	if (yych == '>') goto yy11;
	goto yy6;
yy17:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 64) goto yy17;
	if (yych <= 0x00) goto yy6;
	goto yy19;
yy18:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy18;
	if (yych <= 0x00) goto yy6;
yy19:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 8) goto yy7;
	if (yych == '/') goto yy10;
	if (yych == '>') goto yy11;
	goto yy6;
}

}

bufsize_t _scan_html_pi(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	static const unsigned char yybm[256] = {
		  0, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128,   0,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128
	};
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy22;
	if (yych >= 0x01) goto yy24;
	++p;
yy21:
	{ return 0; }
yy22:
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy22;
	if (yych >= 0x01) goto yy25;
yy23:
	{ return (bufsize_t)(p - start); }
yy24:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 0x00) goto yy21;
	if (yych == '>') goto yy21;
	goto yy22;
yy25:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 0x00) goto yy26;
	if (yych != '>') goto yy22;
yy26:
	p = marker;
	goto yy23;
}

}

bufsize_t _scan_html_declaration(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t marker = 0;
  size_t start = p;
  (void) marker;

{
	unsigned char yych;
	static const unsigned char yybm[256] = {
		  0, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128,   0, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128
	};
	yych = (p < length ? input[p] : 0);
	if (yych <= '@') goto yy28;
	if (yych <= 'Z') goto yy29;
	if (yych <= '`') goto yy28;
	if (yych <= 'z') goto yy29;
yy28:
	++p;
	{ return 0; }
yy29:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy29;
	{ return (bufsize_t)(p - start); }
}

}

bufsize_t _scan_html_cdata(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[256] = {
		  0, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128,   0, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128
	};
	yych = (p < length ? input[p] : 0);
	if (yych == 'C') goto yy32;
	if (yych == 'c') goto yy32;
	++p;
yy31:
	{ return 0; }
yy32:
	yyaccept = 0;
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'D') goto yy33;
	if (yych != 'd') goto yy31;
yy33:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'A') goto yy35;
	if (yych == 'a') goto yy35;
yy34:
	p = marker;
	if (yyaccept == 0) goto yy31;
	else goto yy39;
yy35:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'T') goto yy36;
	if (yych != 't') goto yy34;
yy36:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'A') goto yy37;
	if (yych != 'a') goto yy34;
yy37:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych != '[') goto yy34;
yy38:
	yyaccept = 1;
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy38;
	if (yych >= 0x01) goto yy40;
yy39:
	{ return (bufsize_t)(p - start); }
yy40:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy38;
	if (yych <= 0x00) goto yy34;
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 0x00) goto yy34;
	if (yych == '>') goto yy34;
	goto yy38;
}

}

bufsize_t _scan_html_block_start(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t marker = 0;

{
	unsigned char yych;
	yych = (p < length ? input[p] : 0);
	if (yych == '<') goto yy43;
	++p;
yy42:
	{ return 0; }
yy43:
	++p;
	marker = p;
	yych = (p < length ? input[p] : 0);
	switch (yych) {
		case '!': goto yy44;
		case '/': goto yy46;
		case '?': goto yy47;
		case 'A':
		case 'a': goto yy48;
		case 'B':
		case 'b': goto yy49;
		case 'C':
		case 'c': goto yy50;
		case 'D':
		case 'd': goto yy51;
		case 'F':
		case 'f': goto yy52;
		case 'H':
		case 'h': goto yy53;
		case 'I':
		case 'i': goto yy54;
		case 'L':
		case 'l': goto yy55;
		case 'M':
		case 'm': goto yy56;
		case 'N':
		case 'n': goto yy57;
		case 'O':
		case 'o': goto yy58;
		case 'P':
		case 'p': goto yy59;
		case 'S':
		case 's': goto yy60;
		case 'T':
		case 't': goto yy61;
		case 'U':
		case 'u': goto yy62;
		default: goto yy42;
	}
yy44:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'Z') {
		if (yych == '-') goto yy63;
		if (yych >= 'A') goto yy64;
	} else {
		if (yych <= '[') goto yy65;
		if (yych <= '`') goto yy45;
		if (yych <= 'z') goto yy64;
	}
yy45:
	p = marker;
	goto yy42;
yy46:
	++p;
	yych = (p < length ? input[p] : 0);
	switch (yych) {
		case 'A':
		case 'a': goto yy48;
		case 'B':
		case 'b': goto yy49;
		case 'C':
		case 'c': goto yy50;
		case 'D':
		case 'd': goto yy51;
		case 'F':
		case 'f': goto yy52;
		case 'H':
		case 'h': goto yy53;
		case 'I':
		case 'i': goto yy54;
		case 'L':
		case 'l': goto yy55;
		case 'M':
		case 'm': goto yy56;
		case 'N':
		case 'n': goto yy57;
		case 'O':
		case 'o': goto yy58;
		case 'P':
		case 'p': goto yy66;
		case 'S':
		case 's': goto yy67;
		case 'T':
		case 't': goto yy68;
		case 'U':
		case 'u': goto yy62;
		default: goto yy45;
	}
yy47:
	++p;
	{ return 3; }
yy48:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'S') {
		if (yych <= 'D') {
			if (yych <= 'C') goto yy45;
			goto yy69;
		} else {
			if (yych <= 'Q') goto yy45;
			if (yych <= 'R') goto yy70;
			goto yy71;
		}
	} else {
		if (yych <= 'q') {
			if (yych == 'd') goto yy69;
			goto yy45;
		} else {
			if (yych <= 'r') goto yy70;
			if (yych <= 's') goto yy71;
			goto yy45;
		}
	}
yy49:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'O') {
		if (yych <= 'K') {
			if (yych == 'A') goto yy72;
			goto yy45;
		} else {
			if (yych <= 'L') goto yy73;
			if (yych <= 'N') goto yy45;
			goto yy74;
		}
	} else {
		if (yych <= 'k') {
			if (yych == 'a') goto yy72;
			goto yy45;
		} else {
			if (yych <= 'l') goto yy73;
			if (yych == 'o') goto yy74;
			goto yy45;
		}
	}
yy50:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'O') {
		if (yych <= 'D') {
			if (yych == 'A') goto yy75;
			goto yy45;
		} else {
			if (yych <= 'E') goto yy76;
			if (yych <= 'N') goto yy45;
			goto yy77;
		}
	} else {
		if (yych <= 'd') {
			if (yych == 'a') goto yy75;
			goto yy45;
		} else {
			if (yych <= 'e') goto yy76;
			if (yych == 'o') goto yy77;
			goto yy45;
		}
	}
yy51:
	++p;
	yych = (p < length ? input[p] : 0);
	switch (yych) {
		case 'D':
		case 'L':
		case 'T':
		case 'd':
		case 'l':
		case 't': goto yy78;
		case 'E':
		case 'e': goto yy79;
		case 'I':
		case 'i': goto yy80;
		default: goto yy45;
	}
yy52:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'R') {
		if (yych <= 'N') {
			if (yych == 'I') goto yy81;
			goto yy45;
		} else {
			if (yych <= 'O') goto yy82;
			if (yych <= 'Q') goto yy45;
			goto yy83;
		}
	} else {
		if (yych <= 'n') {
			if (yych == 'i') goto yy81;
			goto yy45;
		} else {
			if (yych <= 'o') goto yy82;
			if (yych == 'r') goto yy83;
			goto yy45;
		}
	}
yy53:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'S') {
		if (yych <= 'D') {
			if (yych <= '0') goto yy45;
			if (yych <= '6') goto yy78;
			goto yy45;
		} else {
			if (yych <= 'E') goto yy84;
			if (yych == 'R') goto yy78;
			goto yy45;
		}
	} else {
		if (yych <= 'q') {
			if (yych <= 'T') goto yy85;
			if (yych == 'e') goto yy84;
			goto yy45;
		} else {
			if (yych <= 'r') goto yy78;
			if (yych == 't') goto yy85;
			goto yy45;
		}
	}
yy54:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'F') goto yy86;
	if (yych == 'f') goto yy86;
	goto yy45;
yy55:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'I') {
		if (yych == 'E') goto yy87;
		if (yych <= 'H') goto yy45;
		goto yy88;
	} else {
		if (yych <= 'e') {
			if (yych <= 'd') goto yy45;
			goto yy87;
		} else {
			if (yych == 'i') goto yy88;
			goto yy45;
		}
	}
yy56:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'E') {
		if (yych == 'A') goto yy89;
		if (yych <= 'D') goto yy45;
		goto yy90;
	} else {
		if (yych <= 'a') {
			if (yych <= '`') goto yy45;
			goto yy89;
		} else {
			if (yych == 'e') goto yy90;
			goto yy45;
		}
	}
yy57:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'O') {
		if (yych == 'A') goto yy91;
		if (yych <= 'N') goto yy45;
		goto yy92;
	} else {
		if (yych <= 'a') {
			if (yych <= '`') goto yy45;
			goto yy91;
		} else {
			if (yych == 'o') goto yy92;
			goto yy45;
		}
	}
yy58:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'P') {
		if (yych == 'L') goto yy78;
		if (yych <= 'O') goto yy45;
		goto yy93;
	} else {
		if (yych <= 'l') {
			if (yych <= 'k') goto yy45;
			goto yy78;
		} else {
			if (yych == 'p') goto yy93;
			goto yy45;
		}
	}
yy59:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= '>') {
		if (yych <= ' ') {
			if (yych <= 0x08) goto yy45;
			if (yych <= '\r') goto yy94;
			if (yych <= 0x1F) goto yy45;
			goto yy94;
		} else {
			if (yych == '/') goto yy95;
			if (yych <= '=') goto yy45;
			goto yy94;
		}
	} else {
		if (yych <= 'R') {
			if (yych == 'A') goto yy96;
			if (yych <= 'Q') goto yy45;
			goto yy97;
		} else {
			if (yych <= 'a') {
				if (yych <= '`') goto yy45;
				goto yy96;
			} else {
				if (yych == 'r') goto yy97;
				goto yy45;
			}
		}
	}
yy60:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'U') {
		if (yych <= 'D') {
			if (yych == 'C') goto yy98;
			goto yy45;
		} else {
			if (yych <= 'E') goto yy99;
			if (yych <= 'S') goto yy45;
			if (yych <= 'T') goto yy100;
			goto yy101;
		}
	} else {
		if (yych <= 'e') {
			if (yych == 'c') goto yy98;
			if (yych <= 'd') goto yy45;
			goto yy99;
		} else {
			if (yych <= 's') goto yy45;
			if (yych <= 't') goto yy100;
			if (yych <= 'u') goto yy101;
			goto yy45;
		}
	}
yy61:
	++p;
	yych = (p < length ? input[p] : 0);
	switch (yych) {
		case 'A':
		case 'a': goto yy102;
		case 'B':
		case 'b': goto yy103;
		case 'D':
		case 'd': goto yy78;
		case 'E':
		case 'e': goto yy104;
		case 'F':
		case 'f': goto yy105;
		case 'H':
		case 'h': goto yy106;
		case 'I':
		case 'i': goto yy107;
		case 'R':
		case 'r': goto yy108;
		default: goto yy45;
	}
yy62:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'L') goto yy78;
	if (yych == 'l') goto yy78;
	goto yy45;
yy63:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == '-') goto yy109;
	goto yy45;
yy64:
	++p;
	{ return 4; }
yy65:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych == 'C') goto yy110;
	if (yych == 'c') goto yy110;
	goto yy45;
yy66:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= '/') {
		if (yych <= 0x1F) {
			if (yych <= 0x08) goto yy45;
			if (yych <= '\r') goto yy94;
			goto yy45;
		} else {
			if (yych <= ' ') goto yy94;
			if (yych <= '.') goto yy45;
			goto yy95;
		}
	} else {
		if (yych <= '@') {
			if (yych == '>') goto yy94;
			goto yy45;
		} else {
			if (yych <= 'A') goto yy96;
			if (yych == 'a') goto yy96;
			goto yy45;
		}
	}
yy67:
	++p;
	yych = (p < length ? input[p] : 0);
	if (yych <= 'U') {
		if (yych == 'E') goto yy99;
		if (yych <= 'T') goto yy45;
		goto yy101;
	} else {
		if (yych <= 'e') {
			if (yych <= 'd') goto yy45;
			goto yy99;
		} else {
			if (yych == 'u') goto yy101;
			goto yy45;
		}
	}
yy68:
	++p;
